force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/BMCServiceDesk__ServiceLevelAgreement__c.object-meta.xml
<CustomObject>
    <description>Stores the definition of different types of agreements (SLA, OLAs and Underpinning Contracts).</description>
    <label>Agreement</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Agreement #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>