force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__Account__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Account__c</fullName>
    <formula>BMCServiceDesk__FKAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account~</label>
    <type>Text</type>
</CustomField>