force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__AccountCount__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AccountCount__c</fullName>
    <label>Account Count</label>
    <summaryForeignKey>BMCServiceDesk__SLA_Account_Link__c.BMCServiceDesk__FKSLA__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>