force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__AgreementOwner__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AgreementOwner__c</fullName>
    <formula>BMCServiceDesk__FKAgreementOwner__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Owner~</label>
    <type>Text</type>
</CustomField>