force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__AgreementTitle__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AgreementTitle__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Use this field to enter a unique alphanumeric identifier that you want to assign to the service level agreement.</inlineHelpText>
    <label>Agreement Title</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>