force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__AgreementType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AgreementType__c</fullName>
    <inlineHelpText>From the list of options, select the type of service level agreement.</inlineHelpText>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Level Agreement</fullName>
                <default>true</default>
                <label>Service Level Agreement</label>
            </value>
            <value>
                <fullName>Operational Level Agreement</fullName>
            </value>
            <value>
                <fullName>Underpinning Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>