force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Description__c</fullName>
    <inlineHelpText>Use this field to enter a description of the service level agreement. For example, you can describe the reason for creating this service level agreement.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>