force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__EffectiveFrom__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__EffectiveFrom__c</fullName>
    <inlineHelpText>Use this field to select the date when the service level agreement is effective.</inlineHelpText>
    <label>Effective From</label>
    <type>DateTime</type>
</CustomField>