force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__EffectiveUntil__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__EffectiveUntil__c</fullName>
    <inlineHelpText>Use this field to select the date when the service level agreement ends.</inlineHelpText>
    <label>Effective Until</label>
    <type>DateTime</type>
</CustomField>