force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__FKAccount__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the account of the service level agreement.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Level Agreements</relationshipLabel>
    <relationshipName>Service_Level_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>