force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__FKAgreementOwner__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKAgreementOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the client of the service level agreement.</inlineHelpText>
    <label>Agreement Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Level_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>