force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__FKBusinessService__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKBusinessService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the service of service level agreement.</inlineHelpText>
    <label>Service</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>Service Level Agreements</relationshipLabel>
    <relationshipName>Service_Level_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>