force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__FKSupportHours__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSupportHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the name of the business hours when the service level agreement is effective. The system administrator configures the business hours for your organization and these business hours appear in this list.</inlineHelpText>
    <label>Support Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Service_Level_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>