force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__Inactive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>