force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__SupportHours__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SupportHours__c</fullName>
    <formula>BMCServiceDesk__FKSupportHours__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Hours~</label>
    <type>Text</type>
</CustomField>