force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/fields/BMCServiceDesk__toAllAccounts__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__toAllAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To All Account</label>
    <type>Checkbox</type>
</CustomField>