force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/validationRules/BMCServiceDesk__Agreement_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Agreement_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISBlank(text(BMCServiceDesk__AgreementType__c))</errorConditionFormula>
    <errorDisplayField>BMCServiceDesk__AgreementType__c</errorDisplayField>
    <errorMessage>Agreement Type Cannot be None</errorMessage>
</ValidationRule>