force-app/main/default/objects/BMCServiceDesk__ServiceLevelAgreement__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__AgreementTitle__c</columns>
    <columns>BMCServiceDesk__AgreementType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>